force-app/main/default/objects/Opportunity/fields/Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >TRUE when this opportunity was auto-generated by the RenewalScheduler. Helps filter renewal pipeline from new business.</description>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>