force-app/main/default/objects/Opportunity/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The closed-won opportunity this renewal was generated from.</description>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewal Opportunities</relationshipLabel>
    <relationshipName>Renewal_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>